--- a/style/style.css
+++ b/style/style.css
@@ -9,13 +9,7 @@ html{
   margin-top: 20px;
 }
 
-#sData{
-  width: 100%;
-  height: 220px;
-  margin-top: 20px;
-  border: 2px solid yellowgreen;
-  font-size: 20px;
-}
+
 
 #sendButton{
   width:fit-content;
@@ -31,12 +25,25 @@ html{
 #revData{
   border: 2px solid rgb(24, 24, 3);
   width: 100%;
-  height: 220px;
+  height: 50%;
   font-size: 20px;
   margin-top: 20px;
   word-break: break-all;
   overflow: auto;
   white-space: pre-wrap;
 
+}
+
+#sData{
+  width: 100%;
+  height: 50%;
+  margin-top: 20px;
+  border: 2px solid yellowgreen;
+  font-size: 20px;
+}
+
+#dataDiv{
+  width: 100%;
+  height: 300px;
 }
 
