--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
-html {
+html,body {
   /* background-color:whitesmoke; */
   user-select: none;
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  margin: 0;
+  height: 100%;
 }
 
 #sAddr {
